--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+ADMIN_FULLNAME=
+ADMIN_USERNAME=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+ADMIN_ADDRESS=
+ADMIN_PHONE=
+ADMIN_POSITION=
